Fix Convert to work for JSTYPE_VOID and make sure it reports an error. bug 394436, r=jst sr=brendan